Finished Responsive: remvoed jquery icon, attempted to fix image porportions so they dont look weird on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -255,16 +255,15 @@ a:active {
 
 /*  USES .DIV-CENTER TO CENTER IMAGES PAGE. ITS CRITICAL!!! */
 .about-images {
-    max-width: 70%;
-    max-height: 70%;
+    max-width: 100%;
+    max-height: 5%;
     margin: 0 15%;
 }
 
 .about-icon {
-    max-width: 25%;
+    max-width: 30%;
     max-height: auto;
-    margin: 0 10%;
-    display: inline;
+    margin: 0 5%;
 }
 
 
@@ -303,14 +302,14 @@ a:active {
 }
 
 .dev-images {
-    max-width: 80%;
-    margin: 0 20%;
+    max-width: 90%;
+    margin: 0 5%;
 }
 
 .dev-icon {
     max-width: 15%;
     max-height: 15%;
-    margin: 0 3%;
+    margin: 0 2%;
 }
 
 /* ******** Experience ******** */
